Got socks hooked up to website.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -23,28 +23,15 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="navbar-brand" href="#">Flight control</a>
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
       </div>
     </div>
 
     <div class="container">
 
       <div class="starter-template">
-        <h1>starttter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <button class="btn btn-default" id="test">Test</button>
       </div>
 
     </div><!-- /.container -->
@@ -53,7 +40,7 @@
     <script>window.jQuery || document.write('<script src="vendor/jquery/jquery.min.js"><\/script>')</script>
 
     <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-
+    <script src="vendor/sockjs/sockjs.min.js"></script>
     <script src="js/main.js"></script>
 
     <script>
