Got simple sketch working using touch controls.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -30,9 +30,9 @@
 
     <div class="container">
 
-      <div class="starter-template">
-        <button class="btn btn-default" id="test">Test</button>
-      </div>
+      <canvas id="sketchpad" width="300" height="400">
+        Sorry, your browser is not supported.
+      </canvas>
 
     </div><!-- /.container -->
 
