--- a/app/public/index.html
+++ b/app/public/index.html
@@ -30,17 +30,18 @@
 
     <div class="container">
 
-      <canvas id="sketchpad" width="300" height="400">
-        Sorry, your browser is not supported.
-      </canvas>
+      <div id="editor"></div>
 
     </div><!-- /.container -->
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="vendor/jquery/jquery.min.js"><\/script>')</script>
+    <script src="vendor/jquery-migrate/jquery-migrate.min.js"></script>
 
     <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="vendor/sockjs/sockjs.min.js"></script>
+    <script src="vendor/raphael/raphael-min.js"></script>
+    <script src="vendor/raphael-sketchpad/javascripts/raphael.sketchpad.js"></script>
     <script src="js/main.js"></script>
 
     <script>
