--- a/app/public/index.html
+++ b/app/public/index.html
@@ -32,6 +32,8 @@
 
       <div id="editor"></div>
 
+      <button id="next" class="btn btn-primary">Next</button>
+
     </div><!-- /.container -->
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
